# brewblox-devcon-spark

./: .clang-format  .editorconfig  .env  .gitignore  .gitmodules  .travis.yml  Dockerfile.flasher  Dockerfile.service  MANIFEST.in  Pipfile  README.md  _azure-pipelines.yml  azure-pipelines.yml  brewblox_sys_db.json  build-arm-sim.sh  celsius_system.txt  codec_settings.json  compile-proto.sh  compile_proto.sh  deploy_docker.py  distcopy.sh  docker-compose.yml  entrypoint.sh  fahrenheit_system.txt  firmware.ini  local-service.sh  parse_appenv.py  pull-binaries.sh  pull-firmware.sh  pyproject.toml  requirements.txt  setup.py  setup.sh  tasks.py  tox.ini
.github/workflows/: build.yml
binaries/: brewblox-amd.REMOVED.git-id  brewblox-arm.REMOVED.git-id  firmware.ini
brewblox_codec_spark/: _path_extension.py  codec.py  compile.sh  modifiers.py  path_extension.py  transcoders.py
brewblox_codec_spark/proto/: EdgeCase.proto  Example.proto  Example_pb2.py  OneWireBus.proto  OneWireBus_pb2.py  OneWireTempSensor.proto  OneWireTempSensor_pb2.py  Pid.options  Pid.proto  Pid_pb2.py  SensorSetPointPair.options  SensorSetPointPair.proto  SensorSetPointPair_pb2.py  SetPointSimple.proto  SetPointSimple_pb2.py  __init__.py  brewblox.proto  brewblox_pb2.py
brewblox_codec_spark/proto-compiled/: EdgeCase_pb2.py  OneWireBus_pb2.py  OneWireTempSensor_pb2.py  Pid_pb2.py  SensorSetPointPair_pb2.py
brewblox_controller_spark/: __main__.py  serial_comm.py
brewblox_devcon_spark/: __main__.py  api.py  app_factory.py  backup_storage.py  block_analysis.py  block_backup.py  block_cache.py  block_store.py  broadcast.py  broadcaster.py  cbox_parser.py  command.py  commander.py  commander_sim.py  commands.py  communication.py  config_store.py  connect_funcs.py  connection.py  connection_sim.py  const.py  control.py  controller.py  couchdb_client.py  datastore.py  datastore_blocks.py  datastore_settings.py  device.py  dns_discovery.py  exceptions.py  file_config.py  global_store.py  mdns.py  models.py  mqtt.py  seeder.py  serial_comm.py  service_status.py  service_store.py  simplestore.py  (+14 more)
brewblox_devcon_spark/api/: __init__.py  alias_api.py  backup_api.py  blocks_api.py  blocks_mqtt_api.py  codec_api.py  conflict_api.py  debug_api.py  error_response.py  mqtt_api.py  object_api.py  profile_api.py  remote_api.py  savepoint_api.py  schemas.py  settings_api.py  sim_api.py  sse_api.py  system_api.py  updater.py  utils.py
brewblox_devcon_spark/codec/: __init__.py  _path_extension.py  bloxfield.py  codec.py  lookup.py  modifiers.py  opts.py  pb2.py  processor.py  sequence.py  time_utils.py  transcoders.py  unit_conversion.py
brewblox_devcon_spark/connection/: __init__.py  base.py  base_connection.py  (+6 more)
config/: brewblox_sys_db.json  celsius_system.txt  fahrenheit_system.txt  protobuf.ini  settings.ini
dev/: compile-proto.sh  download-firmware.sh  update-firmware.sh
docker/: .gitignore  Dockerfile  before_build.sh  docker_base_build.sh  docker_slim_build.sh  localbuild.sh  requirements.txt
firmware/: eeprom  firmware.ini  inspect
flasher/: .gitignore  Dockerfile  before_build.sh  flash  flash-bootloader  inspect  localbuild.sh  serial-switcher.py  serial-trigger.js  wifi
logger/: __init__.py
rpi-docker/: Dockerfile
test/: _test_backup_storage.py  _test_block_analysis.py  _test_block_store.py  _test_broadcaster.py  _test_codec.py  _test_commander.py  _test_connection.py  _test_controller.py  _test_datastore.py  _test_global_store.py  _test_integration.py  _test_main.py  _test_mdns.py  _test_mqtt_api.py  _test_mqtt_connection.py  _test_service_status.py  _test_service_store.py  _test_sim_api.py  _test_stream_connection.py  _test_synchronization.py  _test_time_sync.py  conftest.py  docker-compose.yml  test_api.py  test_app_factory.py  test_backup_storage.py  test_block_analysis.py  test_block_backup.py  test_block_store.py  test_blocks_mqtt_api.py  test_bloxfield.py  test_broadcast.py  test_broadcaster.py  test_cbox_parser.py  test_codec.py  test_codec_bloxfield.py  test_codec_processor.py  test_codec_sequence.py  test_codec_time_utils.py  test_codec_unit_conversion.py  (+53 more)
(+118 files in other folders)
