[tool.poetry]
name = "brewblox-devcon-spark"
version = "1.0.0"
description = "Communication with Spark controllers"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.pyright]
include = ["brewblox_devcon_spark"]
exclude = ["**/node_modules", "**/__pycache__"]

useLibraryCodeForTypes = true
reportMissingImports = "information"

[tool.poetry.dependencies]
python = ">=3.9,<4"
brewblox-service = "^3.1"
pyserial-asyncio = "^0.6"
protobuf = "<4.0dev"
aiofiles = "^0.8.0"
aiozeroconf = "^0.1.8"
debugpy = "^1.5.1"
Pint = "^0.19"
esptool = "^4.0"
pytimeparse = "^1.1.8"
ciso8601 = "^2.2.0"
cryptography = "40.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-aiohttp = "*"
flake8 = "*"
autopep8 = "*"
aresponses = "*"
flake8-quotes = "*"
invoke = "^2.1.3"
grpcio-tools = "<1.49"

[build-system]
requires = ["poetry>=0.12", "cryptography==40.0.1"]
build-backend = "poetry.masonry.api"
