[tool.poetry]
name = "brewblox-devcon-spark"
version = "1.0.0"
description = "Communication with Spark controllers"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.pyright]
include = ["brewblox_devcon_spark"]
exclude = ["**/node_modules", "**/__pycache__"]

useLibraryCodeForTypes = true
reportMissingImports = "information"

[tool.poetry.dependencies]
python = ">=3.9,<4"
brewblox-service = "^3.3.2"
pyserial-asyncio = "^0.6"
protobuf = "^4.24.3"
aiofiles = "^23.2.1"
aiozeroconf = "^0.1.8"
debugpy = "^1.5.1"
Pint = "^0.22"
esptool = "^4.0"
pytimeparse = "^1.1.8"
ciso8601 = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-aiohttp = "*"
flake8 = "*"
autopep8 = "*"
aresponses = "*"
flake8-quotes = "*"
invoke = "*"
grpcio-tools = "^1.58.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
